--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,5 @@ dependencies {
 
     //Tools
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
